# xwingtmg2-inventory-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: expansions.json  expansions.rs  lib.rs  main.rs  xwingdata2.rs  yasb2.rs
src/expansions/: expansions.json  mod.rs
src/xwingdata2/: mod.rs
src/yasb2/: mod.rs
