[package]
name = "xwingtmg2-inventory-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
rust_xlsxwriter = "0.48.0"
serde = { version = "1.0.174", features = ["derive", "serde_derive"] }
serde_json = "1.0.103"
strum = { version = "0.25.0", features = ["derive"] }
